# EMem

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run_emem_locomo.sh  run_emem_locomo_cached.py  run_emem_longmemeval.sh  run_emem_longmemeval_cached.py
analysis/: analyze_qa_token_usage.py  final_eval.py
data/longmemeval/preprocess/: longmemeval_to_locomo_converter.py
src/emem/: EMem.py  __init__.py  content_store.py  embedding_store.py  rerank.py  rerank_structuring.py
src/emem/embedding_model/: BGEM3.py  E5.py  OpenAI.py  __init__.py
src/emem/evaluation/: __init__.py  locomo_eval.py
src/emem/information_extraction/: __init__.py  structuring_openai.py
src/emem/llm/: __init__.py  openai_gpt_batch.py  openai_gpt_batch_chat_completion.py
src/emem/prompts/: filter_structuring_default_prompt.py  prompt_template_manager.py
src/emem/prompts/templates/: argument_filter_locomo_v1.py  argument_filter_v1.py  conversation_edu_extraction_longmemeval_assistant_side_structured_v2.py  conversation_edu_extraction_longmemeval_user_side_w_turn_attribution.py  conversation_edu_extraction_v1.py  conversation_qa.py  edu_filter_locomo_v1.py  edu_filter_v1.py  er_query.py  llm_judge_accuracy.py  ner_query.py  unified_event_extraction.py
src/emem/utils/: config_utils.py  conversation_data_utils.py  date_utils.py  logging_utils.py  misc_utils.py
